[tool.poetry]
name = "onde_dar_sangue"
version = "0.1.0"
description = "Recolhe informação oficial onde actualmente existe recolha de sangue."
authors = ["Filipe Barroso <filipe.barroso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
flask = "^1.1.1"
waitress = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
